Fixed spacing in Button_Layout.txt. Added boiler plate .css and .html content for Settings and Gameplay_Settings_Index. Added buttons to Gameplay_Settings_Index.html

--- a/Nioh2/Section_1/2_Gameplay_Settings/Gameplay_Settings_Index.css
+++ b/Nioh2/Section_1/2_Gameplay_Settings/Gameplay_Settings_Index.css
@@ -1,3 +1,17 @@
 /*
 Styling Sheet for Gameplay_Settings_Index.html 
 */
+
+
+.btn-group {
+    text-align: center;
+    width: 245px;
+    font-size: 16px;
+    margin-right: 0.10em;
+    margin-left: 0.10em;
+    margin-top: 0.25em;
+}
+
+#complete_button_group {
+    margin-top: 23em;
+}
